--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "nesbot/carbon": "^3.8",
         "bramus/router": "^1.6",
         "fakerphp/faker": "^1.24",
-        "google/apiclient": "^2.0"
+        "google/apiclient": "^2.0",
+        "phpoffice/phpspreadsheet": "^4.0",
+        "mpdf/mpdf": "^8.2"
     },
     "license": "mit",
     "autoload": {
